--- a/index.html
+++ b/index.html
@@ -34,109 +34,23 @@
         </div>
     </div>
     <section class="contenedor">
-        <div class="products">
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>20</span></p>
-                </div>
-                <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, aperiam?</p>
-                <a href="" data-id="1" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>35</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                <a href="" class="btn-add-cart" data-id="2">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>15.50</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                <a href="" data-id="3" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>20.20</span></p>
-                </div>
-                <p class="title"> Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="" data-id="4" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>19</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="" data-id="5" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>45</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="" data-id="6" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>23.99</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, placeat!</p>
-                <a href="" data-id="7" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>50</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                <a href="" data-id="8" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>16</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint?</p>
-                <a href="" data-id="9" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>17.50</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="" data-id="10" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>45</span></p>
-                </div>
-                <p class="title"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic!</p>
-                <a href="" data-id="11" class="btn-add-cart">añadir al carrito</a>
-            </div>
-            <div class="carts">
-                <div>
-                    <img src="pictures/ram.png" alt="">
-                    <p>$<span>45</span></p>
-                </div>
-                <p class="title"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur.</p>
-                <a href="" data-id="11" class="btn-add-cart">añadir al carrito</a>
-            </div>
-        </div>
+        <div class="products" id="cards"></div>
     </section>
+    <template id="template-card">
+        <div class="carts">
+            <div>
+                <img src="" alt="">
+                <p>$<span>20</span></p>
+            </div>
+            <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, aperiam?</p>
+            <a href="#" class="btn-add-cart">añadir al carrito</a>
+        </div>
+    </template>
     <div style="height:452px">
         <iframe src="footer.html" style="border:none; width:100%; height: 100%;" title="header" scrolling="no"></iframe>
     </div>
     
+    <script src="js/carrito.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
