--- a/footer.html
+++ b/footer.html
@@ -43,7 +43,7 @@
                             <li class="mb-1 mb-md-3"><a href="#">monitores</a></li>
                             <li class="mb-1 mb-md-3"><a href="#">software</a></li>
                             <li class="mb-1 mb-md-3"><a href="#">periférico</a></li>
-                            <li class="mb-1 mb-md-3"><a href="#">arma tu computadora</a></li>
+                            <li class="mb-1 mb-md-3"><a href="pcbuild.html">arma tu computadora</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
