--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>encabezado</title>
+    <title>Encabezado</title>
 </head>
 
     <nav>
@@ -40,7 +40,7 @@
         <li class="nav-item" ><a href="#" class="nav-link"  >Monitores</a></li>
         <li class="nav-item " ><a href="#" class="nav-link"  >Software</a></li>
         <li class="nav-item" ><a href="#"  class="nav-link" >Perifericos</a></li>
-        <li class="nav-item " ><a href="#" class="nav-link"  >Arma tu computadora</a></li>
+        <li class="nav-item " ><a href="pcbuild.html" class="nav-link"  >Arma tu computadora</a></li>
       </ul>
     </nav>
     <!-- Bootstrap JavaScript Libraries -->
