--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@
             <span class="fa fa-magnifying-glass"></span>
         </div>
         <ol>
-            <li> <a href="login.html" target="_parent"><i class="fa fa-user"></i> iniciar sesión </i></a></li>
+            <li> <a href="login.html" target="_parent"><i class="fa fa-user"></i> iniciar sesión </a></li>
             <li> <a href="cart.html" target="_parent"><i class="fa-solid fa-cart-shopping"></i> Mi carrito </a></li>
         </ol>
     </nav>
@@ -43,6 +43,13 @@
         <li class="nav-item " ><a href="pcbuild.html" class="nav-link"  >Arma tu computadora</a></li>
       </ul>
     </nav>
+    <script>
+        //Script para cambiar el botón de iniciar sesióń por el de perfil
+        if(localStorage.getItem("sesionActiva")){
+            const listaOrdenadaNav = document.getElementsByTagName("nav")[0].getElementsByTagName("ol")[0];
+            listaOrdenadaNav.getElementsByTagName("li")[0].innerHTML = '<li> <a href="perfil.html" target="_parent"><i class="fa fa-user"></i> Usuario </a></li>';
+        }
+    </script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
