--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                         Recordar contraseña
                     </label>
                 </div>
-                <input type="submit" class="submit" value="INICIA SESIÓN">
+                <input id="iniciarSesion" type="submit" class="submit" value="INICIA SESIÓN">
             </form>
         </div>
         <div class="register">
@@ -49,4 +49,15 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
 </body>
+
+<script>
+// Este script nos permite tener una sesión temporal de prueba
+// 
+// Este método crea una variable persistente que se borra al 
+// borrar el historial del navegador
+document.getElementById("iniciarSesion").addEventListener('click',()=>{
+    localStorage.setItem("sesionActiva",true);
+});
+console.log(localStorage.getItem("sesionActiva"));
+</script>
 </html>
