Boton ver producto en index

--- a/cart.html
+++ b/cart.html
@@ -120,7 +120,7 @@
             </aside>
         </div>
       <div class="cart-container">
-        <a class="cart-to-home" href="index2.html">
+        <a class="cart-to-home" href="index.html">
           <i class="fas fa-long-arrow-alt-left" style="margin-right: 5px"></i>
           Volver A Comprar
         </a>
