--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                 <p>$<span>20</span></p>
             </div>
             <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, aperiam?</p>
-            <a href="#" class="btn-add-cart">añadir al carrito</a>
+            <a href="#" class="btn-add-cart" id="cart">añadir al carrito</a>
+            <br>
+            <br>
+            <a href="#" class="btn-add-cart btn-add-product" id="product">ver producto</a>
         </div>
     </template>
     <div style="height:452px">
